# ras_perception

./: CMakeLists.txt  README.md  package.xml
aruco_pose_estimation/: CMakeLists.txt  package.xml
aruco_pose_estimation/config/: aruco_parameters.yaml  calibration_realsense.yaml
aruco_pose_estimation/launch/: aruco_pose_estimation.launch.py
aruco_pose_estimation/scripts/: inventry.py  lattice.py  yolo.py
msg/: RealsenseData.msg
scripts/: aruco_calibration.py  aruco_detection.py  aruco_primitive.py  camera_pose_module.py  generator.py  gui_node.py  intersection_module.py  logging_server.py  main_4.py  move_to_aruco.py  perception_node.py  perception_ros_node.py  plane_module.py  realsense_publisher_node.py  realsense_service.py  ros_bridge_client.py  static_tf.py  test.py  test_bridge.py  yolo_module.py
